--- a/loginpage.html
+++ b/loginpage.html
@@ -24,7 +24,7 @@
 						<div class="input-group-prepend">
 							
 						</div>
-						<input type="text" class="form-control" placeholder="username">
+						<input type="text" class="form-control" placeholder="Email">
 						
 					</div>
 					<div class="input-group form-group">
