--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
             <a id='tphere'></a>
               <div class="reg">
                 <div class="social_icon">
-                  <span><i class="fab fa-facebook-square"></i></span>
-                  <span><i class="fab fa-google-plus-square"></i></span>
-                  <span><i class="fab fa-twitter-square"></i></span>
+                  <span><div data-aos="fade-right" data-aos-duration="1100" aos_data-delay="100"><i class="fab fa-facebook-square" ></i></div></span>
+                  <span><div data-aos="fade-right" data-aos-duration="1400" aos_data-delay="200"><i class="fab fa-google-plus-square"></i></div></span>
+                  <span><div data-aos="fade-right" data-aos-duration="1700" aos_data-delay="300"><i class="fab fa-twitter-square"></i></div></span>
                 </div>
                 <form class="sign-up" onsubmit='sub();return false'>
-                  <div class="card carr">
+                  <div class="card carr" data-aos="fade-up" data-aos-duration="800">
                     <div class='card-body carb'> 
                       <div style="margin-left: 10px;">
                       <h3 class="card-title">Sign Up</h3>
@@ -91,7 +91,7 @@
                     </div>
                   </div>
                 </form>
-              <div id="carouselExampleControls" class="carousel slide pruh" data-bs-ride="carousel">
+              <div id="carouselExampleControls" class="carousel slide pruh" data-aos="fade-up" data-bs-ride="carousel">
                 <div class="carousel-inner">
                   <div id="slide1" class="carousel-item active" data-bs-interval="2500">
                     <div class="carousel-caption d-none d-md-block">
